chore: all edit case pages are working perfectly after splitting them as components

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="caseBook" style="">
+<div class="row" style="">
     <div class="d-flex flex-column fill-width">
         <div class="add-new-button-container">
             <button class="btn btn-primary" (click)="addNewMental()">Add New Mental Status &nbsp;<i class="fa fa-plus"></i></button>
